--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -1,4 +1,5 @@
 name: "Find Ongoing Feature Flags"
+description: ""
 inputs:
   matcher:
     required: true
@@ -9,4 +10,6 @@ runs:
   - uses: actions/setup-python@v4
     with:
       python-version: '3.10'
-  - run: python my_script.py
+  - name: Find Usages
+    shell: bash
+    run: python my_script.py
