--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -10,6 +10,7 @@ runs:
   - uses: actions/setup-python@v4
     with:
       python-version: '3.10'
+      path: "requirements.txt"
   - name: Find Usages
     shell: bash
     run: |
