--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -13,7 +13,7 @@ runs:
   - name: Find Usages
     shell: bash
     run: |
-      git grep -E "is_upcoming_features_enabled\('ENG-[0-9]{0,6}'\)" -- '*.py' |
+      git grep -E {{ $input.matcher }} -- '*.py' |
       python main.py |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
