--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -16,4 +16,6 @@ jobs:
       - uses: ./.github/actions/find_ongoing_feature_flags
         with:
           matcher: "is_upcoming_features_enabled\\('ENG-[0-9]{0,6}'\\)"
+          identifier_matcher: "ENG-\\d{0,6}"
           file_type: "py"
+          cutoff_in_days: "20"
