--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -28,7 +28,7 @@ runs:
     shell: bash
     run: |
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
-      python find.py ${{ inputs.identifier_matcher }} |
+      python find.py "${{ inputs.identifier_matcher }}" |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
-      python parse_and_notify.py ${{ inputs.cutoff_in_days }}
+      python parse_and_notify.py "${{ inputs.cutoff_in_days }}"
