--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -20,6 +20,7 @@ on:
         description: "date parameter that will notify should be int value as string "
         type: string
 
+
 jobs:
   cron:
     runs-on: ubuntu-latest
@@ -27,7 +28,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/find_ongoing_feature_flags
         with:
-          matcher: ${{ inputs.matcher }}
-          identifier_matcher: ${{ inputs.identifier_matcher }}
-          file_type: ${{ inputs.file_type }}
-          cutoff_in_days: ${{ inputs.cutoff_in_days }}
+          matcher: "is_upcoming_features_enabled\\('ENG-[0-9]{0,6}'\\)"
+          identifier_matcher: "ENG-\\d{0,6}"
+          file_type: "py"
+          cutoff_in_days: "20"
