--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -17,8 +17,6 @@ inputs:
     required: true
     description: "date parameter that will notify should be int value as string "
     type: string
-  outputs:
-    results: ${{ steps.search.outputs.result }}
 runs:
   using: "composite"
   steps:
@@ -36,4 +34,5 @@ runs:
       python find.py "${{ inputs.identifier_matcher }}" |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
-      result=`python parse_and_notify.py "${{ inputs.cutoff_in_days }}"`
+      $result=`python parse_and_notify.py "${{ inputs.cutoff_in_days }}"`
+      Write-Output "::set-output name=result::$result"
