--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -34,7 +34,6 @@ runs:
       python find.py "${{ inputs.identifier_matcher }}" |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
-      python parse_and_notify.py "${{ inputs.cutoff_in_days }}" |
-      read result
+      python parse_and_notify.py "${{ inputs.cutoff_in_days }}"
 #      echo "$result"
 #      Write-Output "::set-output name=result::$result"
