--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -37,4 +37,4 @@ runs:
       python parse_and_notify.py "${{ inputs.cutoff_in_days }}" | 
       read result
       echo "$result"
-      Write-Output "::set-output name=result::$result"
+#      Write-Output "::set-output name=result::$result"
