--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -26,7 +26,7 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     outputs:
-      results: ${{ steps.search.outputs.result }}
+      results: ${{ steps.search.outputs.* }}
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/find_ongoing_feature_flags
