--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -39,4 +39,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: cron
     steps:
-      - run: echo ${{needs.cron.outputs.expired}}
+      - run: echo ${{needs.cron.outputs.results}}
