--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -26,7 +26,8 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     outputs:
-      results: ${{ steps.search.another.outputs.test }}
+      output1: ${{ steps.step1.outputs.test }}
+      output2: ${{ steps.step2.outputs.test }}
     steps:
       - uses: actions/checkout@v3
       - id: search
@@ -36,8 +37,12 @@ jobs:
           identifier_matcher: "ENG-\\d{0,6}"
           file_type: "py"
           cutoff_in_days: "20"
-  print:
+      - id: step1
+        run: echo "::set-output name=test::hello"
+      - id: step2
+        run: echo "::set-output name=test::world"
+  job2:
     runs-on: ubuntu-latest
     needs: cron
     steps:
-      - run: echo ${{ needs.cron.outputs.results }}
+      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
