--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -45,4 +45,4 @@ jobs:
     runs-on: ubuntu-latest
     needs: cron
     steps:
-      - run: echo ${{needs.job1.outputs.output1}} ${{needs.job1.outputs.output2}}
+      - run: echo ${{needs.cron.outputs.output1}} ${{needs.cron.outputs.output2}}
