--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -17,6 +17,10 @@ inputs:
     required: true
     description: "date parameter that will notify should be int value as string "
     type: string
+outputs:
+  expired:
+    description: "Expired matches"
+    value: ${{ steps.search.outputs.filtered }}
 runs:
   using: "composite"
   steps:
@@ -25,13 +29,13 @@ runs:
     with:
       python-version: '3.10'
   - id: search
-    shell: bash
     run: |
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
       python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
       python ${{ github.action_path }}/parse_and_notify.py "${{ inputs.cutoff_in_days }}"
+    shell: bash
   - id: another
     shell: bash
     run: echo "::set-output name=test::world"
