--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -26,9 +26,8 @@ jobs:
   cron:
     runs-on: ubuntu-latest
     outputs:
-      output1: ${{ steps.step1.outputs.test }}
-      output2: ${{ steps.step2.outputs.test }}
-      output3: ${{ steps.search.outputs.expired }}
+      expired: ${{ steps.search.outputs.expired }}
+      filtered: ${{ steps.search.outputs.filtered }}
     steps:
       - uses: actions/checkout@v3
       - id: search
@@ -38,13 +37,8 @@ jobs:
           identifier_matcher: "ENG-\\d{0,6}"
           file_type: "py"
           cutoff_in_days: "20"
-      - id: step1
-        run: echo "::set-output name=test::hello"
-      - id: step2
-        run: echo "::set-output name=test::world"
   job2:
     runs-on: ubuntu-latest
     needs: cron
     steps:
-      - run: echo ${{needs.cron.outputs.output1}} ${{needs.cron.outputs.output2}}
-      - run: echo ${{needs.cron.outputs.output3}}
+    - run: echo ${{needs.cron.outputs.filtered}} ${{needs.cron.outputs.expired}}
