--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -21,6 +21,9 @@ outputs:
   expired:
     description: "Expired matches"
     value: ${{ steps.search.outputs.expired }}
+  filtered:
+    description: "Expired matches"
+    value: ${{ steps.search.outputs.filtered }}
 runs:
   using: "composite"
   steps:
