--- a/.github/workflows/ongoing-feature-flags.yml
+++ b/.github/workflows/ongoing-feature-flags.yml
@@ -27,7 +27,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       filtered: ${{ steps.search.outputs.filtered }}
-      expired: ${{ steps.search.outputs.expired }}
+      results: ${{ steps.search.outputs.results }}
     steps:
       - uses: actions/checkout@v3
       - id: search
@@ -41,5 +41,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: cron
     steps:
-    - run: echo ${{ needs.cron.outputs.expired }}
+    - run: echo ${{ needs.cron.outputs.results }}
     - run: echo ${{ needs.cron.outputs.filtered }}
