--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -31,6 +31,10 @@ runs:
   - uses: actions/setup-python@v4
     with:
       python-version: '3.10'
+    run: |
+      git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
+      python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
+      tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n')
   - id: search
     run: |
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
