--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -31,10 +31,6 @@ runs:
   - uses: actions/setup-python@v4
     with:
       python-version: '3.10'
-    run: |
-      git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
-      python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
-      tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n')
   - id: search
     run: |
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
@@ -42,4 +38,10 @@ runs:
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
       tac |
       python ${{ github.action_path }}/parse_and_notify.py "${{ inputs.cutoff_in_days }}"
+    shell: bash
+  - id: test
+    run: |
+      git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
+      python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
+      tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n')
     shell: bash
