--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -37,7 +37,7 @@ runs:
     run: |
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
       python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
-      tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'(%cd) %n') |
+      tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'%aN-(%cd) %n') |
       tac |
       python ${{ github.action_path }}/parse_and_notify.py "${{ inputs.cutoff_in_days }}"
     shell: bash
