--- a/.github/actions/find_ongoing_feature_flags/action.yml
+++ b/.github/actions/find_ongoing_feature_flags/action.yml
@@ -35,7 +35,7 @@ runs:
       python-version: '3.10'
   - id: search
     run: |
-      pip install -r requirements.txt
+      pip install -r ${{ github.action_path }}/requirements.txt
       git grep -E "${{ inputs.matcher }}" -- '*.${{ inputs.file_type }}' |
       python ${{ github.action_path }}/find.py "${{ inputs.identifier_matcher }}" |
       tee >(xargs -I '{}' git log -1 -S '{}' --pretty=format:'%aN-(%cd) %n') |
